# openslam_tinyslam

./: CMakeLists.txt  CoreSLAM.c  CoreSLAM.h  CoreSLAM_ext.c  CoreSLAM_loop_closing.c  CoreSLAM_random.c  CoreSLAM_state.c  Makefile.am  authors  bootstrap  configure.ac  readme
test/: CMakeLists.txt  Makefile.am  README.txt  arrow_up.xcf  gnuplot  test_lab_reverse.c  test_loop_closing.c
third_parties/SDL_gfx/lib/: SDL_gfx.lib
